Refactorización y mejora de manejo de descargas en `UtilidadesGithubRelease`: soporte para inyección de dependencias, manejo de errores mejorado, uso de `URI` y ampliación de pruebas unitarias.